--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.active-tab {
+  @apply p-1 rounded glass;
+}
+
+.tabs-grid-cols-auto {
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
